A lot of cleanup.